--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <!--Menu-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid" id="menu">
-          <a class="navbar-brand" href="#"><img src="./imagem/Logo.png" alt="logo da alura geek"></a>
+          <a class="navbar-brand" href="index.html"><img src="./imagem/Logo.png" alt="logo da alura geek"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <form class="d-flex" role="search">
               <input class="form-control" id="campo-busca" type="search" placeholder="O que deseja encontrar?" aria-label="Search">
-              <button type="button" class="btn btn-outline-primary" id="btn-lupa" type="submit"><img src="../imagem/lupa.png" alt=""></button>
+              <button type="button" class="btn btn-outline-primary" id="btn-lupa" type="submit"><img src="./imagem/lupa.png" alt=""></button>
             </form>
           </div>
-          <div><button class="btn btn-outline-primary"> <a href="formulario-login.html">Login</a></button></div>
+          <div><button type="button" class="btn btn-outline-primary" id="btn-login">Login</button></div>
          
         </div>
       </nav>
@@ -40,7 +40,7 @@
             <div class="carousel-caption">
               <h5 class="banner-titulo" >Dezembro Promocional</h5>
               <p class="banner-texto" >Produtos Selecionados com 33% de desconto</p>
-              <a class="btn btn-primary"  id="banner-btn" href="#" role="button">Ver Consoles</a>
+              <a class="btn btn-primary"  id="banner-btn" href="#consoles" role="button">Ver Consoles</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -48,7 +48,7 @@
             <div class="carousel-caption d-md-block">
               <h5 class="banner-titulo" >Controles</h5>
               <p class="banner-texto" >Produtos Selecionados com 12% de desconto</p>
-              <a class="btn btn-primary"  id="banner-btn" href="#" role="button">Ver Itens</a>
+              <a class="btn btn-primary"  id="banner-btn" href="#consoles" role="button">Ver Itens</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -56,7 +56,7 @@
             <div class="carousel-caption  d-md-block">
               <h5 class="banner-titulo" >Bonecos Funko</h5>
               <p class="banner-texto" >Produtos Selecionados com 25% de desconto</p>
-              <a class="btn btn-primary"  id="banner-btn" href="#" role="button">Ver Itens</a>
+              <a class="btn btn-primary"  id="banner-btn" href="#diversos" role="button">Ver Itens</a>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
     </div>
 <!--Fim banner-->
 <!--Seção Star Wars-->
-    <section class="container-fluid">
+    <section class="container-fluid" id="star-wars">
         <div class="container">
             <h3>Star Wars</h3>
             <a href="todos-os-produtos.html" class="link-tudo">Ver Tudo &rarr;</a>
@@ -153,7 +153,7 @@
     </section>
 <!--Fim Seção Star Wars-->
 <!--Seção consoles-->
-<section class="container-fluid">
+<section class="container-fluid" id="consoles">
     <div class="container">
         <h3>Consoles</h3>
         <a href="todos-os-produtos.html" class="link-tudo">Ver Tudo &rarr;</a>
@@ -235,7 +235,7 @@
 </section>
 <!--Fim consoles-->
 <!--Seção diversos-->
-<section class="container-fluid">
+<section class="container-fluid" id="diversos">
     <div class="container">
         <h3>Diversos</h3>
         <a href="todos-os-produtos.html" class="link-tudo">Ver Tudo &rarr;</a>
@@ -339,14 +339,14 @@
             <div class="col-12 col-md-6">
                 <h6>Fale Conosco</h6>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label"></label>
-                    <input type="text" class="form-control" id="nome" placeholder="Nome">
+                  <form name="myForm" action="" onsubmit="return validaForm(this);">
+                    <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome">
                   </div>
                   <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label"></label>
                     <textarea class="form-control" id="mensagem" rows="3" placeholder="Escreva sua mensagem"></textarea>
                   </div>
                   <button class="btn btn-primary" type="submit">Enviar mensagem</button>
+                  </form>
             </div>
         </div>
     </div>
@@ -354,7 +354,8 @@
 <!--Fim Informações do site e contato-->
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  <script src=""></script>
+  <script src="./js/evento-botoes.js"></script>
+  <script src="./js/validacao-formulario.js"></script>
 </body>
 <!--Rodape-->
 <footer class="rodape text-center pt-2 pb-2">
