--- a/todos-os-produtos.html
+++ b/todos-os-produtos.html
@@ -13,7 +13,7 @@
     <!--Menu-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid" id="menu">
-          <a class="navbar-brand" href="#"><img src="./imagem/Logo.png" alt="logo da alura geek"></a>
+          <a class="navbar-brand" href="index.html"><img src="./imagem/Logo.png" alt="logo da alura geek"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -276,16 +276,16 @@
                 <div><a href="#" class="rodape-link">Anuncie Aqui</a></div>                
             </div>
             <div class="col-12 col-md-6">
-                <h6>Fale Conosco</h6>
+              <h6>Fale Conosco</h6>
+              <div class="mb-3">
+                <form name="myForm" action="" onsubmit="return validaForm(this);">
+                  <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome">
+                </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label"></label>
-                    <input type="text" class="form-control" id="nome" placeholder="Nome">
-                  </div>
-                  <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label"></label>
-                    <textarea class="form-control" id="mensagem" rows="3" placeholder="Escreva sua mensagem"></textarea>
-                  </div>
-                  <button class="btn btn-primary" type="submit">Enviar mensagem</button>
+                  <textarea class="form-control" id="mensagem" rows="3" placeholder="Escreva sua mensagem"></textarea>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar mensagem</button>
+                </form>
             </div>
         </div>
     </div>
@@ -293,7 +293,7 @@
 <!--Fim Informações do site e contato-->
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  <script src=""></script>
+  <script src="./js/validacao-formulario.js"></script>
 </body>
 <!--Rodape-->
 <footer class="rodape text-center pt-2 pb-2">
